# Battle-for-Wesnoth-on-Android

./: AndroidBuild.sh  AndroidManifest.xml  Makefile.in  an_orcish_incursion.tar  build.properties  build.xml  build.xml.~1~  config.h  descent_into_darkness.tar  local.properties  the_south_guard.tar
autom4te.cache/: traces.1
data/core/: hotkeys.cfg
data/hardwired/: tips.cfg
data/themes/: default.cfg
doc/: Makefile.in
jni/: Android.mk  Settings.mk  launchConfigureLib.sh  sdl-1.3  template.mk
jni/SDL-1.2/: Android.mk
jni/SDL-1.3/: Android.mk
jni/SDL_blitpool/: Android.mk
jni/SDL_gfx/: Android.mk
jni/SDL_image/: Android.mk
jni/gettext-0.18/gettext-tools/libgrep/: ChangeLog  Makefile  Makefile.am  Makefile.in  dfa.c  dfa.h  hard-locale.c  kwset.c  kwset.h  m-common.c  m-common.h  m-fgrep.c  m-regex.c  regex.c  regex.h
m4/: Makefile.in
src/: .MainActivity.java.swp  Accelerometer.java  Audio.java  DataDownloader.java  GLSurfaceView_SDL.java  Globals.java  KeyboardLayout.java  Keycodes.java  MainActivity.java  Makefile.in  Settings.java  TarBuffer.java  TarConstants.java  TarEntry.java  TarInputStream.java  TarOutputStream.java  TarUtils.java  Video.java  about.cpp  about.hpp  actions.cpp  actions.hpp  addon_management.cpp  animated.i  animated_game.cpp  asserts.hpp  attack_prediction.hpp  attack_prediction_display.cpp  callable_objects.cpp  cavegen.hpp  chat_events.hpp  clipboard.cpp  config.cpp  config.hpp  config_cache.cpp  config_cache.hpp  construct_dialog.hpp  dialogs.cpp  display.hpp  events.cpp  (+101 more)
system/: clocale  gdb.setup  locale.h
utils/: tagfind  wiki_grabber.py
(+3951 files in other folders)
